--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png" />
 
-		<title>Test App</title>
+		<title>LoreFrame</title>
 	</head>
 	<body class="light" style="background: #f5f5f5">
 
