--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png" />
 
 		<title>LoreFrame</title>
+
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-EJBNNTX712');
+		</script>
 	</head>
 	<body class="light" style="background: #f5f5f5">
 
